--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Management</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header>
@@ -85,12 +85,12 @@
       </div>
     </div>
 
-    <script src="js/modules/utils.js"></script>
-    <script src="js/modules/storage.js"></script>
-    <script src="js/modules/api.js"></script>
-    <script src="js/components/modals.js"></script>
-    <script src="js/components/handlers.js"></script>
-    <script src="js/modules/ui.js"></script>
-    <script src="js/app.js"></script>
+    <script type="module" src="js/modules/utils.js"></script>
+    <script type="module" src="js/modules/storage.js"></script>
+    <script type="module" src="js/modules/api.js"></script>
+    <script type="module" src="js/components/modals.js"></script>
+    <script type="module" src="js/components/handlers.js"></script>
+    <script type="module" src="js/modules/ui.js"></script>
+    <script type="module" src="js/app.js"></script>
   </body>
 </html>
